# Info_update_bot

./: README.md  pyproject.toml  scripts.py
multiply_ai_coding_task/: __init__.py  chat.py
update_bot/: chat.py  factfind.py  test_chat.py
